<resources>
    <string name="app_name">TeenJob</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search</string>
    <string name="menu_slideshow">Resume</string>
    <string name="menu_tools">Application</string>
    <string name="menu_status">Status</string>
    <string name="menu_share">Share</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="error_value_required">Fill in value</string>
    <string name="password_not_same">Password Not same</string>
    <string name="url_server">https://teenjob.000webhostapp.com/api/</string>
    <string name="url_user_read">user/read.php</string>
    <string name="url_user_create">user/create.php</string>
    <string name="url_company_read">company/read.php</string>
    <string name="url_status_read">status/read.php</string>
</resources>
