<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assignment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.assignment.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.assignment.ui.search.SearchFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_application"
        android:name="com.example.assignment.ui.application.ApplicationFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_application" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.assignment.ui.Status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_logout"
        android:label="@string/menu_logout"
        />
</navigation>